# TemplatePythonProject

./: .gitignore  pyproject.toml
.github/: dependabot.yml  mergify.yml
.github/workflows/: ci.yml
src/template_python_project/: __init__.py
tests/unit/: test_hello.py
