[tool.poetry]
name = "template-python-project"
version = "0.1.0"
description = "Template python project using poetry"
authors = ["Mayank Pathak <onlinejudge95@gmail.com>"]
readme = "README.md"
packages = [{include = "template_python_project", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
ruff = "0.6.7"
mypy = "1.11.2"
pytest = "8.3.3"
pytest-cov = "5.0.0"
pytest-mock = "3.14.0"
pytest-asyncio = "0.24.0"

[tool.ruff]
include = ["*.py"]
line-length = 120
output-format = "grouped"
respect-gitignore = true
src = ["src"]

[tool.ruff.format]
docstring-code-format = true
line-ending = "native"
quote-style = "double"
skip-magic-trailing-comma = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
